tests/gabc-dump/should-fail/unclosed-hepisema-adjustment-2.gabc
name: unclosed horizontal episema adjustment (2);
%%
(c4) f(f[oh{]) g(g[oh{]) (::)
